# simple_proj

./: create_fastapi_app.py  docker-compose.yml  main.py  pyproject.toml
actions/: create_superuser.py
alembic/versions/: 2025_09_22_1943-0d948ff17a03_create_users_table.py  2025_09_23_1345-a13c4c824cf4_update_users_table.py  2025_09_23_1513-0e27355a9a27_create_access_tokens_table.py
api/: __init__.py
api/api_v1/: __init__.py  auth.py  fastapi_users_routers.py  messages.py  users.py
api/dependencies/: backend.py  fastapi_users_routers.py  strategy.py  user_manager.py  users.py
api/dependencies/authentication/: __init__.py  access_tokens.py  strategy.py  user_manager.py
core/: config.py
core/authentification/: transport.py  user_manager.py
core/crud/: __init__.py  user.py
core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
core/schemas/: __init__.py  user.py
utils/: __init__.py
